--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	
 	<div class="size1 bg0 where1-parent">
 		<!-- Coutdown -->
-		<div class="flex-c-m bg-img1 size2 where1 overlay1 where2 respon2" style="background-image: url('images/bg02.jpg');">
+		<div class="flex-c-m bg-img1 size2  where1 respon2" style="background-image: url('images/bg03.png');">
 			
 		</div>
 		
@@ -42,7 +42,8 @@
 				
 
 				<p class="s2-txt3 p-t-18">
-					Want to become part of our team?
+					Want to become part of our team? <br>
+					
 	
 					Mail us your Resume at : career@pseo.in
 				</p>
